2019-05-23  Jonathan Wakely  <jwakely@redhat.com>

	* include/experimental/any (__any_caster): Use RTTI if comparing
	addresses fails, to support non-unique addresses in shared libraries.
	* include/std/any (__any_caster): Likewise.

	PR libstdc++/90220
	* include/experimental/any (__any_caster): Constrain to only be
	callable for object types. Use remove_cv_t instead of decay_t.
	If the type decays or isn't copy constructible, compare the manager
	function to a dummy specialization.
	(__any_caster): Add overload constrained for non-object types.
	(any::_Manager_internal<_Op>): Add dummy specialization.
	* testsuite/experimental/any/misc/any_cast.cc: Test function types
	and array types.

2019-05-22  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/90557
	* src/c++17/fs_path.cc (path::_List::operator=(const _List&)): Fix
	reversed arguments to uninitialized_copy_n.
	* testsuite/27_io/filesystem/path/assign/copy.cc: Check that source
	is unchanged by copy assignment.
	* testsuite/util/testsuite_fs.h (compare_paths): Use std::equal to
	compare path components.

	PR libstdc++/77691
	* include/experimental/memory_resource: Add system header pragma and
	do not define anything unless compiled as C++14 or later.
	(__resource_adaptor_common::__guaranteed_alignment): Remove.
	(__resource_adaptor_imp::do_allocate): If the requested alignment
	is a fundamental alignment then either allocate directly from _M_alloc
	or call the new _M_allocate function.
	(__resource_adaptor_imp::do_deallocate): Likewise for deallocation.
	(__resource_adaptor_imp::_M_allocate): New function that uses a copy
	of the allocator rebound to a POD type with the specified alignment.
	(__resource_adaptor_imp::_M_deallocate): Likewise for deallocation.
	* testsuite/experimental/memory_resource/new_delete_resource.cc:
	Adjust expected allocation sizes.
	* testsuite/experimental/memory_resource/resource_adaptor.cc: Remove
	xfail for Solaris x86.

2019-05-21  Thomas Rodgers  <trodgers@redhat.com>
